fix block products

--- a/task3/index.html
+++ b/task3/index.html
@@ -55,7 +55,7 @@
             Pellentesque agestat sem. Suspendisse commodo ullamcorper magna.
         </div>
     </article>
-    <div class="more-info">
+    <section class="more-info">
         <div class="more-info__item">
             <img class="more-info__icon more-info__icon-img-1">
             <div class="more-info__block">
@@ -89,7 +89,7 @@
                 </div>
                 <a href="#"><div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"></div></div></a>
             </div></div>
-    </div>
+    </section>
     <div class="line">
         <div class="line__img"></div>
     </div>
@@ -99,7 +99,7 @@
             Fusce lobortis lorem at ipsum semper sagittis
         </div>
     </article>
-    <div class="news">
+    <section class="news">
         <div class="news__item">
             <div class="news__header">VESTIBULUM COMMODO FELIS QUIS TORTOR</div>
             <div class="news__photo"> <img class="news__photo" src="images/newsphoto1.png"></div>
@@ -118,7 +118,7 @@
             <div class="news__text">Faucibus non, congue vel, arcu. Ut scelerisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique</div>
             <a href="#"><div class="news__link">MORE INFO<div class="news__arrow"> <img src="images/arrow.png"></div></div></a>
         </div>
-    </div>
+    </section>
     <div class="line">
         <div class="line__img"></div>
     </div>
@@ -130,25 +130,19 @@
             volutpat. Nam dui mi, tincidunt quis, accumsan porttitor
         </div>
     </article>
-    <div class="products">
+    <section class="products">
         <div class="products__title">OUR PRODUCTS</div>
         <div class="products__items ">
-            <div class="products__l-items">
                 <div class="products__item">INTEGER VIT</div>
                 <div class="products__item">DONCE AMETUNO</div>
-            </div>
-
             <div class="products__item">VOLUPTANIN</div>
             <div class="products__item">TINCIDUN</div>
             <div class="products__item">PORTTION SOUTI</div>
-            <div class="products__l-items">
                 <div class="products__item">NAMDUI SINOSI</div>
                 <div class="products__item">FERMNUTIN</div>
-            </div>
-
         </div>
 
-    </div>
+    </section>
     <div class="button-line button-line-padding-top-less">
         <div class="button-line__lines">
             <a class="button-line__button" href="#top">VIEW MORE</a>
@@ -160,5 +154,4 @@
     Designed:www.alltemplateneeds.com /Images from:www.wallpaperswide.com
 </footer>
 </body>
-</html>
 </html>
