--- a/task2/index.html
+++ b/task2/index.html
@@ -55,7 +55,7 @@
                 Pellentesque agestat sem. Suspendisse commodo ullamcorper magna.
         </div>
     </article>
-    <div class="more-info">
+    <section class="more-info">
         <div class="more-info__item">
             <img class="more-info__icon more-info__icon-img-1">
           <div class="more-info__block">
@@ -65,7 +65,7 @@
               <div class="more-info__text">
                   Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero,  id...
               </div>
-              <a href="#"><div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"></div></div></a>
+              <a href="#" class="more-info__link">MORE INFO <img src="images/arrow.png" class="more-info__arrow"></a>
           </div> </div>
         <div class="more-info__item">
         <img class="more-info__icon more-info__icon-img-2">
@@ -76,7 +76,7 @@
             <div class="more-info__text">
                 Ced egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucib...
             </div>
-                <a href="#"> <div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"> </div></div></a>
+                <a href="#" class="more-info__link">MORE INFO <img src="images/arrow.png" class="more-info__arrow"></a>
         </div></div>
         <div class="more-info__item">
         <img class="more-info__icon more-info__icon-img-3">
@@ -87,9 +87,9 @@
             <div class="more-info__text">
                 Tegestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, fauc...
             </div>
-                <a href="#"><div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"></div></div></a>
+                <a href="#" class="more-info__link">MORE INFO <img src="images/arrow.png" class="more-info__arrow"></a>
         </div></div>
-    </div>
+    </section>
     <div class="line">
         <div class="line__img"></div>
     </div>
@@ -99,26 +99,26 @@
                 Fusce lobortis lorem at ipsum semper sagittis
         </div>
     </article>
-    <div class="news">
+    <section class="news">
         <div class="news__item">
             <div class="news__header">VESTIBULUM COMMODO FELIS QUIS TORTOR</div>
             <div class="news__photo"> <img class="news__photo" src="images/newsphoto1.png"></div>
             <div class="news__text">Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut lectus.</div>
-            <a href="#"><div class="news__link">MORE INFO<div class="news__arrow"> <img src="images/arrow.png"></div></div></a>
+            <a href="#" class="news__link">MORE INFO <img src="images/arrow.png" class="news__arrow"></a>
         </div>
         <div class="news__item">
             <div class="news__header">DONEC QUIS DUI AT<br>DOLOR TEMPOR INTERDUM</div>
             <div class="news__photo"> <img class="news__photo" src="images/newsphoto2.png"></div>
             <div class="news__text">Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscing risus</div>
-            <a href="#"><div class="news__link">MORE INFO<div class="news__arrow"> <img src="images/arrow.png"></div></div></a>
+            <a href="#" class="news__link">MORE INFO <img src="images/arrow.png" class="news__arrow"></a>
         </div>
         <div class="news__item">
             <div class="news__header">FUSCE LOBORTIS <br>LOREM AT IPSUM SEMPER</div>
             <div class="news__photo"> <img class="news__photo" src="images/newsphoto3.png"></div>
             <div class="news__text">Faucibus non, congue vel, arcu. Ut scelerisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique</div>
-            <a href="#"><div class="news__link">MORE INFO<div class="news__arrow"> <img src="images/arrow.png"></div></div></a>
+            <a href="#" class="news__link">MORE INFO <img src="images/arrow.png" class="news__arrow"></a>
         </div>
-    </div>
+    </section>
     <div class="line">
         <div class="line__img"></div>
     </div>
@@ -130,7 +130,7 @@
                 volutpat. Nam dui mi, tincidunt quis, accumsan porttitor
         </div>
     </article>
-    <div class="products">
+    <section class="products">
         <div class="products__title">OUR PRODUCTS</div>
         <div class="products__items ">
             <div class="products__l-items">
@@ -148,7 +148,7 @@
 
         </div>
 
-    </div>
+    </section>
     <div class="button-line button-line-padding-top-less">
         <div class="button-line__lines">
             <a class="button-line__button" href="#top">VIEW MORE</a>
@@ -160,5 +160,4 @@
 Designed:www.alltemplateneeds.com /Images from:www.wallpaperswide.com
 </footer>
 </body>
-</html>
 </html>
