banner-image = bg

--- a/task3/index.html
+++ b/task3/index.html
@@ -34,7 +34,7 @@
         <a href="#" class="nav__item">CONTACT</a>
     </nav>
     <div class="banner">
-        <img class="banner__img" src="images/banner-bg.png">
+        <div class="banner__img"></div>
     </div>
     <article class="text-row">
         <div class="text-row__header"> LOREM IPSUM</div>
