--- a/task3/index.html
+++ b/task3/index.html
@@ -65,8 +65,9 @@
                 <div class="more-info__text">
                     Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero,  id...
                 </div>
-                <a href="#"><div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"></div></div></a>
-            </div> </div>
+            </div>
+            <a href="#" class="more-info__link">MORE INFO <img src="images/arrow.png" class="more-info__arrow"></a>
+        </div>
         <div class="more-info__item">
             <img class="more-info__icon more-info__icon-img-2">
             <div class="more-info__block">
@@ -76,8 +77,9 @@
                 <div class="more-info__text">
                     Ced egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucib...
                 </div>
-                <a href="#"> <div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"> </div></div></a>
-            </div></div>
+            </div>
+            <a href="#" class="more-info__link">MORE INFO <img src="images/arrow.png" class="more-info__arrow"></a>
+        </div>
         <div class="more-info__item">
             <img class="more-info__icon more-info__icon-img-3">
             <div class="more-info__block">
@@ -87,8 +89,9 @@
                 <div class="more-info__text">
                     Tegestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, fauc...
                 </div>
-                <a href="#"><div class="more-info__link">MORE INFO<div class="more-info__arrow"> <img src="images/arrow.png"></div></div></a>
-            </div></div>
+            </div>
+            <a href="#" class="more-info__link">MORE INFO <img src="images/arrow.png" class="more-info__arrow"></a>
+        </div>
     </section>
     <div class="line">
         <div class="line__img"></div>
@@ -104,19 +107,19 @@
             <div class="news__header">VESTIBULUM COMMODO FELIS QUIS TORTOR</div>
             <div class="news__photo"> <img class="news__photo" src="images/newsphoto1.png"></div>
             <div class="news__text">Mauris nibh felis, adipiscing varius, adipiscing in, lacinia vel, tellus. Suspendisse ac urna. Etiam pellentesque mauris ut lectus.</div>
-            <a href="#"><div class="news__link">MORE INFO<div class="news__arrow"> <img src="images/arrow.png"></div></div></a>
+            <a href="#" class="news__link">MORE INFO <img src="images/arrow.png" class="news__arrow"></a>
         </div>
         <div class="news__item">
             <div class="news__header">DONEC QUIS DUI AT<br>DOLOR TEMPOR INTERDUM</div>
             <div class="news__photo"> <img class="news__photo" src="images/newsphoto2.png"></div>
             <div class="news__text">Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscing risus</div>
-            <a href="#"><div class="news__link">MORE INFO<div class="news__arrow"> <img src="images/arrow.png"></div></div></a>
+            <a href="#" class="news__link">MORE INFO <img src="images/arrow.png" class="news__arrow"></a>
         </div>
         <div class="news__item">
             <div class="news__header">FUSCE LOBORTIS <br>LOREM AT IPSUM SEMPER</div>
             <div class="news__photo"> <img class="news__photo" src="images/newsphoto3.png"></div>
             <div class="news__text">Faucibus non, congue vel, arcu. Ut scelerisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique</div>
-            <a href="#"><div class="news__link">MORE INFO<div class="news__arrow"> <img src="images/arrow.png"></div></div></a>
+            <a href="#" class="news__link">MORE INFO <img src="images/arrow.png" class="news__arrow"></a>
         </div>
     </section>
     <div class="line">
@@ -133,13 +136,13 @@
     <section class="products">
         <div class="products__title">OUR PRODUCTS</div>
         <div class="products__items ">
-                <div class="products__item">INTEGER VIT</div>
-                <div class="products__item">DONCE AMETUNO</div>
+            <div class="products__item">INTEGER VIT</div>
+            <div class="products__item">DONCE AMETUNO</div>
             <div class="products__item">VOLUPTANIN</div>
             <div class="products__item">TINCIDUN</div>
             <div class="products__item">PORTTION SOUTI</div>
-                <div class="products__item">NAMDUI SINOSI</div>
-                <div class="products__item">FERMNUTIN</div>
+            <div class="products__item">NAMDUI SINOSI</div>
+            <div class="products__item">FERMNUTIN</div>
         </div>
 
     </section>
