--- a/task2/index.html
+++ b/task2/index.html
@@ -24,23 +24,23 @@
 <body class="body">
 <div class="body__main">
     <header class="logo">
-            <div class ="logo__img"></div>
+        <div class ="logo__img"></div>
     </header>
     <nav class="nav">
-            <a href="#" class="nav__item">HOME</a>
-            <a href="#" class="nav__item">ABOUT</a>
-            <a href="#" class="nav__item">SERICES</a>
-            <a href="#" class="nav__item">PRODUCTS</a>
-            <a href="#" class="nav__item">CONTACT</a>
+        <a href="#" class="nav__item">HOME</a>
+        <a href="#" class="nav__item">ABOUT</a>
+        <a href="#" class="nav__item">SERICES</a>
+        <a href="#" class="nav__item">PRODUCTS</a>
+        <a href="#" class="nav__item">CONTACT</a>
     </nav>
     <div class="banner">
-        <img class="banner__img" src="images/banner-bg.png">
+        <div class="banner__img"></div>
     </div>
     <article class="text-row">
         <div class="text-row__header"> LOREM IPSUM</div>
         <div class="text-row__text">
-                Donce nec justo eget felis facilisis fermentum.<br>
-                Aliquam porttit or mauris sit amet orci. Aenean dignissim pellentesque felis.
+            Donce nec justo eget felis facilisis fermentum.<br>
+            Aliquam porttit or mauris sit amet orci. Aenean dignissim pellentesque felis.
         </div>
     </article>
     <div class="button-line">
@@ -51,44 +51,47 @@
     <article class="text-row ">
         <div class="text-row__header">VIVAMUS VEST</div>
         <div class="text-row__text">
-                Sed adipiscing ornare risus. Morbi est est, blandit sit ament, sagittis vel, euismod vel, velit.<br>
-                Pellentesque agestat sem. Suspendisse commodo ullamcorper magna.
+            Sed adipiscing ornare risus. Morbi est est, blandit sit ament, sagittis vel, euismod vel, velit.<br>
+            Pellentesque agestat sem. Suspendisse commodo ullamcorper magna.
         </div>
     </article>
     <section class="more-info">
         <div class="more-info__item">
             <img class="more-info__icon more-info__icon-img-1">
-          <div class="more-info__block">
-              <div class="more-info__header">
-              FUSCE PELLENTESQUE SUSCIPIT NIBH
-          </div>
-              <div class="more-info__text">
-                  Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero,  id...
-              </div>
-              <a href="#" class="more-info__link">MORE INFO <img src="images/arrow.png" class="more-info__arrow"></a>
-          </div> </div>
-        <div class="more-info__item">
-        <img class="more-info__icon more-info__icon-img-2">
             <div class="more-info__block">
-            <div class="more-info__header">
-                INTEGER VITAE LIBERO <br> AC RISUS AGESTAS
+                <div class="more-info__header">
+                    FUSCE PELLENTESQUE SUSCIPIT NIBH
+                </div>
+                <div class="more-info__text">
+                    Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero,  id...
+                </div>
             </div>
-            <div class="more-info__text">
-                Ced egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucib...
-            </div>
-                <a href="#" class="more-info__link">MORE INFO <img src="images/arrow.png" class="more-info__arrow"></a>
-        </div></div>
+            <a href="#" class="more-info__link">MORE INFO <img src="images/arrow.png" class="more-info__arrow"></a>
+        </div>
         <div class="more-info__item">
-        <img class="more-info__icon more-info__icon-img-3">
+            <img class="more-info__icon more-info__icon-img-2">
             <div class="more-info__block">
-            <div class="more-info__header">
-                VERSTIBULUM COMMODO FELIS QUIS TORT
+                <div class="more-info__header">
+                    INTEGER VITAE LIBERO <br> AC RISUS AGESTAS
+                </div>
+                <div class="more-info__text">
+                    Ced egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucib...
+                </div>
             </div>
-            <div class="more-info__text">
-                Tegestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, fauc...
+            <a href="#" class="more-info__link">MORE INFO <img src="images/arrow.png" class="more-info__arrow"></a>
+        </div>
+        <div class="more-info__item">
+            <img class="more-info__icon more-info__icon-img-3">
+            <div class="more-info__block">
+                <div class="more-info__header">
+                    VERSTIBULUM COMMODO FELIS QUIS TORT
+                </div>
+                <div class="more-info__text">
+                    Tegestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, fauc...
+                </div>
             </div>
-                <a href="#" class="more-info__link">MORE INFO <img src="images/arrow.png" class="more-info__arrow"></a>
-        </div></div>
+            <a href="#" class="more-info__link">MORE INFO <img src="images/arrow.png" class="more-info__arrow"></a>
+        </div>
     </section>
     <div class="line">
         <div class="line__img"></div>
@@ -96,7 +99,7 @@
     <article class="text-row text-row-padding-after-line">
         <div class="text-row__header">CRAS IACULIS</div>
         <div class="text-row__text">
-                Fusce lobortis lorem at ipsum semper sagittis
+            Fusce lobortis lorem at ipsum semper sagittis
         </div>
     </article>
     <section class="news">
@@ -125,27 +128,21 @@
     <article class="text-row text-row-padding-after-line">
         <div class="text-row__header">NUNC DIGNISS</div>
         <div class="text-row__text">
-                Praesent dapibus, neque id cursus faucibus,<br>
-                tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat <br>
-                volutpat. Nam dui mi, tincidunt quis, accumsan porttitor
+            Praesent dapibus, neque id cursus faucibus,<br>
+            tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat <br>
+            volutpat. Nam dui mi, tincidunt quis, accumsan porttitor
         </div>
     </article>
     <section class="products">
         <div class="products__title">OUR PRODUCTS</div>
         <div class="products__items ">
-            <div class="products__l-items">
-                <div class="products__item">INTEGER VIT</div>
-                <div class="products__item">DONCE AMETUNO</div>
-            </div>
-
+            <div class="products__item">INTEGER VIT</div>
+            <div class="products__item">DONCE AMETUNO</div>
             <div class="products__item">VOLUPTANIN</div>
             <div class="products__item">TINCIDUN</div>
             <div class="products__item">PORTTION SOUTI</div>
-            <div class="products__l-items">
             <div class="products__item">NAMDUI SINOSI</div>
             <div class="products__item">FERMNUTIN</div>
-            </div>
-
         </div>
 
     </section>
@@ -157,7 +154,7 @@
     <div class="footer"></div>
 </div>
 <footer class="body__copyright">Copyright(c) website name<br>
-Designed:www.alltemplateneeds.com /Images from:www.wallpaperswide.com
+    Designed:www.alltemplateneeds.com /Images from:www.wallpaperswide.com
 </footer>
 </body>
 </html>
