--- a/task3/index.html
+++ b/task3/index.html
@@ -72,7 +72,7 @@
             <img class="more-info__icon more-info__icon-img-2">
             <div class="more-info__block">
                 <div class="more-info__header">
-                    INTEGER VITAE LIBERO <br> AC RISUS AGESTAS
+                    INTEGER VITAE LIBERO  AC RISUS AGESTAS
                 </div>
                 <div class="more-info__text">
                     Ced egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucib...
@@ -110,13 +110,13 @@
             <a href="#" class="news__link">MORE INFO <img src="images/arrow.png" class="news__arrow"></a>
         </div>
         <div class="news__item">
-            <div class="news__header">DONEC QUIS DUI AT<br>DOLOR TEMPOR INTERDUM</div>
+            <div class="news__header">DONEC QUIS DUI AT  DOLOR TEMPOR INTERDUM</div>
             <div class="news__photo"> <img class="news__photo" src="images/newsphoto2.png"></div>
             <div class="news__text">Suspendisse mauris. Fusce accumsan mollis eros. Pellentesque a diam sit amet mi ullamcorper vehicula. Integer adipiscing risus</div>
             <a href="#" class="news__link">MORE INFO <img src="images/arrow.png" class="news__arrow"></a>
         </div>
         <div class="news__item">
-            <div class="news__header">FUSCE LOBORTIS <br>LOREM AT IPSUM SEMPER</div>
+            <div class="news__header">FUSCE LOBORTIS  LOREM AT IPSUM SEMPER</div>
             <div class="news__photo"> <img class="news__photo" src="images/newsphoto3.png"></div>
             <div class="news__text">Faucibus non, congue vel, arcu. Ut scelerisque hendrerit tellus. Integer sagittis. Vivamus a mauris eget arcu gravida tristique</div>
             <a href="#" class="news__link">MORE INFO <img src="images/arrow.png" class="news__arrow"></a>
