--- a/js-task3/index.html
+++ b/js-task3/index.html
@@ -12,6 +12,6 @@
 <hr>
 <input type="button" value="Button seconds" onclick="task3()">
 <hr>
-<input type="text" oninput="task4()" id="task4_id">
+<input type="text" onkeypress="task4()" id="task4_id">
 </body>
 </html>
