--- a/js-task3/index.html
+++ b/js-task3/index.html
@@ -6,7 +6,7 @@
     <script src="index.js"></script>
 </head>
 <body>
-<input type="button" value="Button 5 sec." onclick="task1()">
+<input type="button" value="Button 5 sec." onclick="handler1" id="t1">
 <hr>
 <input type="button" value="Button every 3 sec." onclick="task2()">
 <hr>
