--- a/js-task3/index.html
+++ b/js-task3/index.html
@@ -6,11 +6,11 @@
     <script src="index.js"></script>
 </head>
 <body>
-<input type="button" value="Button 5 sec." onclick="handler1" id="t1">
+<input type="button" value="Button 5 sec." onclick="task1()" id="task1_id">
 <hr>
-<input type="button" value="Button every 3 sec." onclick="task2()">
+<input type="button" value="Button every 3 sec." onclick="task2()" id="task2_id">
 <hr>
-<input type="button" value="Button seconds" onclick="task3()">
+<input type="button" value="Button seconds" onclick="task3()" id="task3_id">
 <hr>
 <input type="text" onkeypress="task4()" id="task4_id">
 </body>
