refactor task3 add task5

--- a/js-task3/index.html
+++ b/js-task3/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="index.js"></script>
 </head>
 <body>
-<input type="button" value="Button 5 sec." onclick="task1()" id="task1_id">
+<input type="button" value="Button 5 sec." id="task1_id">
 <hr>
-<input type="button" value="Button every 3 sec." onclick="task2()" id="task2_id">
+<input type="button" value="Button every 3 sec." id="task2_id">
 <hr>
-<input type="button" value="Button seconds" onclick="task3()" id="task3_id">
+<input type="button" value="Button seconds" id="task3_id">
 <hr>
-<input type="text" onkeypress="task4()" id="task4_id">
+<input type="text" id="task4_id">
+<script src="index.js"></script>
 </body>
 </html>
